syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.chitas.grpc";
option java_outer_classname = "RoomProto";

service RoomService {
  rpc CreateRoom(CreateRoomRequest) returns (RoomResponse);
  rpc JoinRoom(JoinRoomRequest) returns (RoomResponse);
}

message CreateRoomRequest {
  string creator = 1;
  string white = 2;
  string black = 3;
}

message JoinRoomRequest {
  string roomId = 1;
  string visitor = 2;
}

message RoomResponse {
  string roomId = 1;
  string status = 2;
}
